--- a/_sources/24ss/schedule.ipynb
+++ b/_sources/24ss/schedule.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "remove-cell"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "remove-cell"
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "remove-cell"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "remove-cell"
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "remove-input"
@@ -148,7 +148,7 @@
        "                          <td class=\"text-left align-top\">Programming -vs- software engineering, time, scale, and the trade-offs </td>\n",
        "                          <td class=\"text-left align-top\"><a href=https://learning.oreilly.com/library/view/software-engineering-at/9781492082781/ch01.html>Chapter 1: What is Software Engineering?</a> from Software Engineering at Google.</td>\n",
        "                          <td class=\"text-left align-top\"></td>\n",
-       "                          <td class=\"text-left align-top\"></td>\n",
+       "                          <td class=\"text-left align-top\"><a href=/24ss/slides/lecture_2.html>Lecture Slides</a></td>\n",
        "                        </tr><tr class=\"align-top\">\n",
        "                          <th scope=\"row\" class=\"text-left align-top\">Tue, Jan 16, 2024<br><span class=\"badge rounded-pill bg-warning text-dark\">Warning</span></th>\n",
        "                          <td class=\"text-left align-top\">No Class</td>\n",
@@ -160,9 +160,8 @@
        "                          <th scope=\"row\" class=\"text-left align-top\">Thu, Jan 18, 2024</th>\n",
        "                          <td class=\"text-left align-top\">Lecture 3: Teams </td>\n",
        "                          <td class=\"text-left align-top\">Team roles, developer strengths and growth, meetings, collaboration tools</td>\n",
-       "                          <td class=\"text-left align-top\"><a href=https://learning.oreilly.com/library/view/software-engineering-at/9781492082781/ch02.html>Chapter 2: How to Work Well on Teams</a> from Software Engineering at Google.\n",
-       "<a href=https://learning.oreilly.com/library/view/mythical-man-month-the/0201835959/ch02.xhtml>Chapter 2: The Mythical Man-Month</a> from The Mythical Man-Month.</td>\n",
-       "                          <td class=\"text-left align-top\"></td>\n",
+       "                          <td class=\"text-left align-top\"><a href=https://learning.oreilly.com/library/view/software-engineering-at/9781492082781/ch02.html>Chapter 2: How to Work Well on Teams</a> from Software Engineering at Google.<br> <a href=https://learning.oreilly.com/library/view/mythical-man-month-the/0201835959/ch02.xhtml>Chapter 2: The Mythical Man-Month</a> from The Mythical Man-Month.</td>\n",
+       "                          <td class=\"text-left align-top\">Course project team declaration</td>\n",
        "                          <td class=\"text-left align-top\"></td>\n",
        "                        </tr><tr class=\"align-top\">\n",
        "                          <th scope=\"row\" class=\"text-left align-top\">Tue, Jan 23, 2024</th>\n",
@@ -368,7 +367,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
