updates to schedule

--- a/_sources/24ss/schedule.ipynb
+++ b/_sources/24ss/schedule.ipynb
@@ -314,7 +314,7 @@
        "                        \n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
-       "                        <ul style='padding-left: 5px;'><li>Quiz 1 in class</li></ul>\n",
+       "                        <ul style='padding-left: 5px;'><li>Quiz 1 (online)</li></ul>\n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
        "                        \n",
@@ -386,7 +386,7 @@
        "                        \n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
-       "                        <ul style='padding-left: 5px;'><li>Quiz 2 in class</li></ul>\n",
+       "                        <ul style='padding-left: 5px;'><li>Quiz 2 (online)</li></ul>\n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
        "                        \n",
@@ -458,7 +458,7 @@
        "                        \n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
-       "                        <ul style='padding-left: 5px;'><li>Quiz 3 in class</li></ul>\n",
+       "                        <ul style='padding-left: 5px;'><li>Quiz 3 (online)</li></ul>\n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
        "                        \n",
@@ -638,7 +638,7 @@
        "                        \n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
-       "                        <ul style='padding-left: 5px;'><li>Quiz 4 in class</li></ul>\n",
+       "                        <ul style='padding-left: 5px;'><li>Quiz 4 (online)</li></ul>\n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
        "                        \n",
@@ -710,7 +710,7 @@
        "                        \n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
-       "                        <ul style='padding-left: 5px;'><li>Quiz 5 in class</li></ul>\n",
+       "                        <ul style='padding-left: 5px;'><li>Quiz 5 (online)</li></ul>\n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
        "                        \n",
