updates to lecture 3

--- a/_sources/24ss/schedule.ipynb
+++ b/_sources/24ss/schedule.ipynb
@@ -263,7 +263,7 @@
        "                        <ul style='padding-left: 5px;'><li>Course project team declaration deadline.</li></ul>\n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
-       "                        <ul style='padding-left: 5px;'><li><a href=\"/24ss/slides/lecture_3/lecture_3.html\">Lecture slides</a></li></ul>\n",
+       "                        <ul style='padding-left: 5px;'><li><a href=\"/24ss/slides/lecture_3/lecture_3.html\">Lecture slides - 1</a></li><li><a href=\"/24ss/slides/lecture_3/18JAN2024.pptx\">Lecture slides - 2</a></li></ul>\n",
        "                      </td>\n",
        "                    </tr><tr style=\"align:top\">\n",
        "                      <td style=\"vertical-align: top;\">\n",
