--- a/_sources/24ss/schedule.ipynb
+++ b/_sources/24ss/schedule.ipynb
@@ -257,7 +257,7 @@
        "                        <p style=\"margin-top: -10px\">Team roles, working in teams, knowledge sharing.</p>\n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
-       "                        <ul style='padding-left: 5px;'><li><a href=\"https://learning.oreilly.com/library/view/software-engineering-at/9781492082781/ch02.html\">Chapter 2: How to Work Well on Teams</a></li><li><a href=\"https://learning.oreilly.com/library/view/software-engineering-at/9781492082781/ch03.htm\">Chapter 3: Knowledge Sharing</a></li><li><a href=\"https://learning.oreilly.com/library/view/mythical-man-month-the/0201835959/ch02.xhtml\">Chapter 2: The Mythical Man-Month</a></li></ul>\n",
+       "                        <ul style='padding-left: 5px;'><li><a href=\"https://learning.oreilly.com/library/view/software-engineering-at/9781492082781/ch02.html\">Chapter 2: How to Work Well on Teams</a></li><li><a href=\"https://learning.oreilly.com/library/view/software-engineering-at/9781492082781/ch03.html\">Chapter 3: Knowledge Sharing</a></li><li><a href=\"https://learning.oreilly.com/library/view/mythical-man-month-the/0201835959/ch02.xhtml\">Chapter 2: The Mythical Man-Month</a></li></ul>\n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
        "                        <ul style='padding-left: 5px;'><li>Course project team declaration deadline.</li></ul>\n",
