update to schedule

--- a/_sources/24ss/schedule.ipynb
+++ b/_sources/24ss/schedule.ipynb
@@ -271,8 +271,8 @@
        "                        \n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
-       "                        <p style=\"font-weight: bold;\"></p>\n",
-       "                        <p style=\"margin-top: -10px\"></p>\n",
+       "                        <p style=\"font-weight: bold;\">Software Development Life Cycle</p>\n",
+       "                        <p style=\"margin-top: -10px\">Traditional, Agile, and DevOps software development life cycles.</p>\n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
        "                        \n",
