--- a/_sources/24ss/schedule.ipynb
+++ b/_sources/24ss/schedule.ipynb
@@ -275,13 +275,13 @@
        "                        <p style=\"margin-top: -10px\">Traditional, Agile, and DevOps software development life cycles.</p>\n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
-       "                        \n",
+       "                        <ul style='padding-left: 5px;'><li><a href=\"https://aws.amazon.com/what-is/sdlc/\">What is SDLC (Software Development Life Cycle)?</a></li><li><a href=\"https://agilemanifesto.org/\">The Agile Manifesto</a></li></ul>\n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
        "                        <ul style='padding-left: 5px;'><li>Lab 1 due</li></ul>\n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
-       "                        \n",
+       "                        <ul style='padding-left: 5px;'><li><a href=\"/24ss/slides/lecture_4.html\">Lecture slides</a></li></ul>\n",
        "                      </td>\n",
        "                    </tr><tr style=\"align:top\">\n",
        "                      <td style=\"vertical-align: top;\">\n",
@@ -289,8 +289,8 @@
        "                        \n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
-       "                        <p style=\"font-weight: bold;\"></p>\n",
-       "                        <p style=\"margin-top: -10px\"></p>\n",
+       "                        <p style=\"font-weight: bold;\">Software Development Life Cycle (Continued)</p>\n",
+       "                        <p style=\"margin-top: -10px\">Traditional, Agile, and DevOps software development life cycles.</p>\n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
        "                        \n",
@@ -299,7 +299,7 @@
        "                        \n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
-       "                        \n",
+       "                        <ul style='padding-left: 5px;'><li><a href=\"/24ss/slides/lecture_5.html\">Lecture slides</a></li></ul>\n",
        "                      </td>\n",
        "                    </tr><tr style=\"align:top\">\n",
        "                      <td style=\"vertical-align: top;\">\n",
@@ -494,7 +494,7 @@
        "                        \n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
-       "                        <ul style='padding-left: 5px;'><li>Course project part 1 due</li></ul>\n",
+       "                        <ul style='padding-left: 5px;'><li>Lab 4 due</li></ul>\n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
        "                        \n",
@@ -602,7 +602,7 @@
        "                        \n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
-       "                        <ul style='padding-left: 5px;'><li>Lab 4 due</li></ul>\n",
+       "                        <ul style='padding-left: 5px;'><li>Lab 5 due</li></ul>\n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
        "                        \n",
@@ -674,7 +674,7 @@
        "                        \n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
-       "                        <ul style='padding-left: 5px;'><li>Lab 5 due</li></ul>\n",
+       "                        <ul style='padding-left: 5px;'><li>Lab 6 due</li></ul>\n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
        "                        \n",
@@ -736,7 +736,7 @@
        "                    </tr><tr style=\"align:top\">\n",
        "                      <td style=\"vertical-align: top;\">\n",
        "                        Apr 23<br>\n",
-       "                        <span class=\"badge rounded-pill bg-warning text-dark\">No Final Exam</span>\n",
+       "                        <span class=\"badge rounded-pill bg-warning text-dark\">No Final Exam, Course Project Due</span>\n",
        "                      </td>\n",
        "                      <td style=\"text-align: left;vertical-align: top;\">\n",
        "                        <p style=\"font-weight: bold;\"></p>\n",
